# lambda-diagrams

./: README.md  Setup.hs  lambda-diagrams.cabal  prog.lam  stack.yaml
src/: Main.hs
